<resources>
    <string name="app_name">My Shop</string>
    <string name="my_shop">My Shop</string>
    <string name="about_us">About Us</string>
    <string name="comment">Comment:</string>
    <string name="send_by_email">Send By Email</string>
    <string name="watch">WATCH</string>
    <string name="hat">HAT</string>
    <string name="shoes">SHOES</string>
    <string name="socks">SOCKS</string>
    <string name="dress">DRESS</string>
    <string name="shirt">SHIRT</string>
    <string name="setting">Setting</string>
    <string name="picture">Picture</string>
    <string name="cost">Cost</string>
    <string name="total_cost">Total Cost</string>
    <string name="num">Num</string>
    <string name="dashboard">Dashboard</string>
    <string name="shop_list">Shop List</string>
    <string name="contact_us">Contact Us</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="buy">BUY</string>
    <string name="your_shopping_list_is_empty">Your Shopping List is Empty.</string>
    <string name="total">Total:</string>
    <string name="totalcost">TotalCost</string>
    <string name="thanks_to">Thanks to</string>
    <string name="username">username</string>
    <string name="payment">Payment</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="address">Address:</string>
    <string name="tel">Tel:</string>
    <string name="username1">Username:</string>
    <string name="email_address">Email Address:</string>
    <string name="name">Name:</string>
    <string name="username2">Username:</string>
</resources>