<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="clickListener1"
            type="android.view.View.OnClickListener"/>
        <variable
            name="clickListener2"
            type="android.view.View.OnClickListener"/>
        <variable
            name="clickListener3"
            type="android.view.View.OnClickListener"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/HorizontalGuideLine"

            />
        <View
            android:id="@+id/GradientView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gradiant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/HorizontalGuideLine"
            />
        <TextView
            android:id="@+id/costTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/cost"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/RightVerticalGuideLine"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/PosTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/total_cost"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/RightVerticalGuideLine"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/total_cost"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/RightVerticalGuideLine" />
        <TextView
            android:id="@+id/UrlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            android:visibility="invisible"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/LeftVerticalGuideLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.03"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/RightVerticalGuideLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.97"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/HorizontalGuideLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.85"
            android:orientation="horizontal"/>

        <ImageButton
            android:id="@+id/incimageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:layout_constraintStart_toStartOf="@id/LeftVerticalGuideLine"
            app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
            app:layout_constraintEnd_toStartOf="@+id/NumTextView"
            android:onClick="@{clickListener1}"
            tools:ignore="ContentDescription,MissingConstraints" />

        <ImageButton
            android:id="@+id/decimageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
            app:layout_constraintEnd_toStartOf="@+id/delimageButton"
            app:layout_constraintStart_toEndOf="@+id/NumTextView"
            android:onClick="@{clickListener2}"
            tools:ignore="ContentDescription" />
        <ImageButton
            android:id="@+id/delimageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
            app:layout_constraintStart_toEndOf="@+id/decimageButton"
            android:onClick="@{clickListener3}"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/NumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/num"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
            app:layout_constraintStart_toEndOf="@+id/incimageButton"
            app:layout_constraintEnd_toStartOf="@+id/decimageButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>